# pgimporter

./: .gitignore  Cargo.toml  README.md  test.yml
.github/workflows/: deploy.yml  rust.yml
src/: batch.rs  config.rs  copy.rs  db.rs  main.rs  multi_import.rs  query.rs  single_import.rs  utils.rs
test/: create.sql  insert.sql  test.sh  test.yml
tests/: integration_test.rs  test.sh  test.yml
tests/ci/: create.sql  insert.sql  test.sh
