[package]
name = "pgimporter"
version = "0.2.0"
authors = ["Miguel Rivero <charrinton@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
clap = "3.0.0-beta.2"
dialoguer = "0.7.1"
indicatif = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.14"
postgres = "0.19"
regex = "1.4.3"
resolve = "0.2.0"
rust_decimal = { version = "1.10.3", features = ["db-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple-logging = "2.0.2"

[profile.release]
lto = true